# sefaria-semantic-server

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.py  setup.sh  test_search.py
api/: books.py  dependencies.py  main.py  pipeline.py  search.py
ingestion/: download_sefaria.py  normalize.py  schema.py
models/: reranker.py
preprocess/: chunker.py  embedder.py  indexer.py  summarizer.py
training/: build_training_data.py  train_reranker.py  train_retriever.py
utils/: __init__.py  ssl_config.py
web/: .gitignore  README.md  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BookTreeView.tsx  DeleteControls.tsx  ModelSelector.tsx  SearchBar.tsx
web/contexts/: EmbeddingModelContext.tsx
web/types/: index.ts
