[project]
name = "torah-source-finder"
version = "1.0.0"
description = "Torah source search system based on Sefaria"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.2",
    "transformers>=4.35.0",
    "torch>=2.3.0",
    "FlagEmbedding>=1.2.0",
    "numpy>=1.24.3",
    "python-multipart>=0.0.6",
]

[tool.hatch.build.targets.wheel]
packages = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

